# modmulzoo

./: .gitignore  Cargo.toml  README  vmlal.c
.cursor/rules/: add-rust-dependency.mdc
.github/workflows/: rust.yml
asm/: hello copy.s  hello.s  smul notes.s
benches/: montgomery.rs  montgomery_benchmarks.rs
crates/block-multiplier/: Cargo.toml
crates/block-multiplier-codegen/src/: lib.rs  load_store.rs  main.rs  scalar.rs  simd.rs
crates/block-multiplier-sys/: Cargo.toml
crates/block-multiplier-sys/src/: lib.rs
crates/block-multiplier/benches/: bench.rs
crates/block-multiplier/src/: constants.rs  lib.rs  test_generator.rs
crates/experiments/: Cargo.toml  Makefile
crates/experiments-lowlevel/: Cargo.toml
crates/experiments-lowlevel/asm/: valid_test.s
crates/experiments-lowlevel/c/: Makefile-simd-example
crates/experiments/benches/: montgomery.rs
crates/experiments/examples/: accelerate_example.rs
crates/experiments/src/: acar.rs  arith.rs  domb.rs  interleaved.rs  lib.rs  test_generator.rs  wide.c  yuval.rs
crates/experiments/src/emmart/: mod.rs  paper.rs  uint52.rs
crates/hla/: Cargo.toml
crates/hla/asm/: global_asm_single_step.s  global_asm_smul.s  global_asm_smul_add.s  mulu128.s
crates/hla/benches/: bench.rs
crates/hla/src/: backend.rs  builder.rs  codegen.rs  frontend.rs  instructions.rs  ir.rs  lib.rs  liveness.rs  main.rs  montgomery.rs  reification.rs
crates/mod256-generator/: Cargo.toml
crates/mod256-generator/src/: lib.rs
crates/modmul-asm/: Cargo.toml  build.rs
crates/modmul-asm/asm/: a.out  global_asm_reduce_ct_simd.s  global_asm_school_method.s  global_asm_schoolmethod.s  global_asm_schoolmethod_old.s  global_asm_single_step.s  global_asm_single_step_interleaved.s  global_asm_single_step_interleaved_seq_scalar.s  global_asm_single_step_interleaved_triple_scalar.s  global_asm_single_step_load.s  global_asm_single_step_simd.s  global_asm_single_step_split.s  global_asm_smul.s  global_asm_smul_add.s  global_asm_smul_noint_simd.s  global_asm_u256_to_u260_shl2_simd.s  global_asm_u260_to_u256_simd.s  global_asm_vmultadd_noinit_simd.s  inline_asm_schoolmethod.s  mulu128.s  single_step_simd.s  u256_to_u260_shl2_simd.s  vmultadd_noinit_simd.s
crates/modmul-asm/benches/: bench.rs
crates/modmul-asm/src/: lib.rs
src/: acar.rs  arith.rs  domb.rs  emmart.rs  gen.rs  inst.rs  interleaved.rs  lib.rs  main.rs  simd_example.cpp  vmlal.c  yuval.rs
src/emmart/: mod.rs  paper.rs  uint52.rs
