[package]
name = "montgomery_reduction"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 2
lto = true

[profile.bench]
lto = true

[dependencies]
dynasm = "3.0.1"
dynasmrt = "3.0.1"
lazy_static = "1.5.0"
libc = "0.2.170"
# Rand feature doesn't work after rand 0.7
num-bigint = { version = "0.4.6" }
num-traits = "0.2.19"
num_cpus = "1.16.0"
rand = "0.9"
rayon = "1.10.0"
seq-macro = "0.3.5"

[dev-dependencies]
ark-ff = "0.5.0"
criterion = "0.5"
rand = "0.9"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[[bench]]
name = "montgomery"
harness = false
