[package]
name = "hla"
version = "0.1.0"
edition = "2024"

[dependencies]
paste = "1.0.15"
montgomery_reduction = { path = "../experiments" }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
mod256-generator = { path = "../mod256-generator" }
criterion = "0.5.1"
rand = "0.9.0"

[[bench]]
name = "bench"
harness = false
